# embedded-tests

./: .gitignore  LICENSE  README.org
ecl/: Makefile  README.org  entry.lisp  main.cc
ecl/exlib/: Makefile  entry.asd  hello-lisp.lisp  hello.cc  packages.lisp
julia/: CMakeLists.txt  README.org  main.cc  main.jl
julia/exlib/: hello.cc
sbcl/: Makefile  README.org  entrypoint.lisp  hello-lisp.lisp  packages.lisp  tools.asd
sbcl/exlib/: Makefile  chello.cc  chello.h  hello.cc  hello.hh
